@@ -9,6 +9,11 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  13 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: Added 
+  support for ECONF_LIBDIR; if it isn't defined, then --libdir isn't 
+  passed to the configure script.  If it is defined, then the configure 
+  script gets --libdir=/usr/${ECONF_LIBDIR}.
+
   13 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/cvstree.py: 
   Added robbat2's patch to ignore files that cvs ignores. (#46070). 
 
